package online.onosoft.domain.model;

public enum PaymentStatus {
    Planned,
    Obligo,
    Due
}
