package online.onosoft.domain.model;

public class Receipt {
}
