package onosoft.domain.model;

public enum PaymentType {
    Cash,
    CreditCard,
    ECCard,
    BankTransfer
}
